fix(Badge): left align label

--- a/src/styles/components/_badge.scss
+++ b/src/styles/components/_badge.scss
@@ -11,6 +11,7 @@
 
   &__label {
     @extend .caption, .semibold;
+    text-align: left;
   }
 
   @include themes($badge-themes) {
